5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1675_1932.log
== TEST (2019-05-01 17:38:09) 
-- CODE:
a = float(input("distancia entre os olhos, da imagem 1:"))
a1= float(input("distancia entre o nariz e o queixo, da imagem 1:"))
b = float(input("distancia entre os olhos, da imagem 2:"))
b1 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
c = float(input("distancia entre os olhos, da imagem 3:"))
c1 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:38:18) 
-- CODE:
a = float(input("distancia entre os olhos, da imagem 1:"))
a1= float(input("distancia entre o nariz e o queixo, da imagem 1:"))
b = float(input("distancia entre os olhos, da imagem 2:"))
b1 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
c = float(input("distancia entre os olhos, da imagem 3:"))
c1 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:47:56) 
-- CODE:
a = float(input("distancia entre os olhos, da imagem 1:"))
a1= float(input("distancia entre o nariz e o queixo, da imagem 1:"))
b = float(input("distancia entre os olhos, da imagem 2:"))
b1 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
c = float(input("distancia entre os olhos, da imagem 3:"))
c1 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

f1 = a / a1
f2 = b / b1
f3 = c / c1

#calculo das faces

F1 = abs(f1 - f2)
F2 = abs(f1 - f3)

if(F1 > F2)
	print(1, "e",3)
else:
	print(1, "e",2)

-- ERROR:
File "XXXX", line 17
    if(F1 > F2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:48:03) 
-- CODE:
a = float(input("distancia entre os olhos, da imagem 1:"))
a1= float(input("distancia entre o nariz e o queixo, da imagem 1:"))
b = float(input("distancia entre os olhos, da imagem 2:"))
b1 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
c = float(input("distancia entre os olhos, da imagem 3:"))
c1 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

f1 = a / a1
f2 = b / b1
f3 = c / c1

#calculo das faces

F1 = abs(f1 - f2)
F2 = abs(f1 - f3)

if(F1 > F2):
	print(1, "e",3)
else:
	print(1, "e",2)

-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:48:11) 
-- CODE:
a = float(input("distancia entre os olhos, da imagem 1:"))
a1= float(input("distancia entre o nariz e o queixo, da imagem 1:"))
b = float(input("distancia entre os olhos, da imagem 2:"))
b1 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
c = float(input("distancia entre os olhos, da imagem 3:"))
c1 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

f1 = a / a1
f2 = b / b1
f3 = c / c1

#calculo das faces

F1 = abs(f1 - f2)
F2 = abs(f1 - f3)

if(F1 > F2):
	print(1, "e",3)
else:
	print(1, "e",2)

-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:48:36) 
-- CODE:
a = float(input("distancia entre os olhos, da imagem 1:"))
a1= float(input("distancia entre o nariz e o queixo, da imagem 1:"))
b = float(input("distancia entre os olhos, da imagem 2:"))
b1 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
c = float(input("distancia entre os olhos, da imagem 3:"))
c1 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

f1 = a / a1
f2 = b / b1
f3 = c / c1

#calculo das faces

F1 = abs(f1 - f2)
F2 = abs(f1 - f3)

if(F1 > F2):
	print(1, "e",3)
else:
	print(1, "e",2)

-- EXECUTION TIME:
0.182344
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
1 e 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:59:04) 
-- CODE:
a = float(input("distancia entre os olhos, da imagem 1:"))
a1= float(input("distancia entre o nariz e o queixo, da imagem 1:"))
b = float(input("distancia entre os olhos, da imagem 2:"))
b1 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
c = float(input("distancia entre os olhos, da imagem 3:"))
c1 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

f1 = a / a1
f2 = b / b1
f3 = c / c1

#calculo das faces

F1 = abs(f1 - f2)
F2 = abs(f1 - f3)
F3 = abs(f2 - f3)
if(F1 > F2):
	print(1, "e",3)
elif(F1 > F3):
	print(2, "e",3)
elif(F2 > F1):
	print(1, "e",2)
elif(F2 > F3):
	print(2, "e",3)
elif(F3 > F1):
	print(1, "e",2)
else:
	print(1, "2",3)

-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:59:35) 
-- CODE:
a = float(input("distancia entre os olhos, da imagem 1:"))
a1= float(input("distancia entre o nariz e o queixo, da imagem 1:"))
b = float(input("distancia entre os olhos, da imagem 2:"))
b1 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
c = float(input("distancia entre os olhos, da imagem 3:"))
c1 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

f1 = a / a1
f2 = b / b1
f3 = c / c1

#calculo das faces

F1 = abs(f1 - f2)
F2 = abs(f1 - f3)
F3 = abs(f2 - f3)
if(F1 > F2):
	print(1, "e",3)
elif(F1 > F3):
	print(2, "e",3)
elif(F2 > F1):
	print(1, "e",2)
elif(F2 > F3):
	print(2, "e",3)
elif(F3 > F1):
	print(1, "e",2)
else:
	print(1, "e",3)

-- EXECUTION TIME:
0.209218
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
